tests/fixtures/valid/source_relative_paths/nested/model.etcm
spec DataConfig:
  local_file: Path = Field(path_exists="must_exist", path_kind="file")

impl default:
  local_file: "local.txt"
