tests/fixtures/invalid/missing_path_must_exist.etcm
spec BadPath:
  file_path: Path = Field(path_exists="must_exist", path_kind="file")

impl default:
  file_path: "does-not-exist.txt"
